<resources>
    <!--Base strings-->
    <string name="app_name">Kitchen</string>
    <!-- TODO: prefix ???.???.auth must be same as applicationId-->
    <string name="base_auth_type">com.leeasysolutions.kitchen.mobile.auth</string>
    <!-- TODO: prefix ???.???.core.provider must be same as applicationId-->
    <string name="app_base_sync_authority">com.leeasysolutions.kitchen.core.provider</string>

    <!--API Errors-->
    <string name="error_host_required">Server URL required</string>
    <string name="error_server_error">Server error</string>
    <string name="error_version_not_supported">Odoo version not supported.</string>
    <string name="error_time_out">Timeout</string>
    <string name="hint_host_url">Server URL</string>
    <string name="hint_login_email">Username/Email</string>
    <string name="hint_password">Password</string>
    <string name="label_login">Login</string>
    <string name="error_username_required">Username required</string>
    <string name="error_password_required">Password required</string>
    <string name="msg_authenticating">Authenticating…</string>
    <string name="msg_authentication_fail">Authentication failed. Try again !</string>
    <string name="title_select_database">Select database</string>
    <string name="msg_enter_database_name">Input database name</string>
    <string name="hint_database_name">Database name</string>
    <string name="toast_database_name_required">Database name required</string>
    <string name="hint_input_value">Value</string>
    <string name="account_label">Crony App</string>
    <string name="msg_account_already_exists">Account already exists !</string>
    <string name="error_unable_to_reach_server">Unable to reach server</string>
    <string name="font_light">sans-serif-light</string>
    <string name="msg_one_time_setup">One-time setup in progress…</string>
    <string name="label_lets_explore">Let\'s Explore</string>
    <string name="msg_no_access_to_app">You don\'t have access to use app feature.</string>
    <string name="label_retry">Retry</string>
    <string name="title_orders">Orders</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_refreshing">Refreshing…</string>
    <string name="title_kitchen_orders">Kitchen Orders</string>
    <string name="label_qty">QTY</string>
    <string name="title_ready_to_deliver">Ready to Deliver</string>
    <string name="title_process_order">Process Order</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="label_no_orders">No orders</string>
    <string name="title_confirm">Confirm</string>
    <string name="label_reference">Reference</string>
    <string name="label_product">Product</string>
    <string name="label_customer">Customer</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_order_on">Order On</string>
    <string name="label_refresh_data">Refresh data</string>
    <string name="toast_updating_data">Updating data</string>
    <string name="toast_data_updated">Data updated</string>
    <string name="label_session_expired">Session Expired !</string>
    <string name="snack_something_gone_wrong">Something gone wrong !</string>
    <string name="title_cancel_order">Cancel order</string>
    <string name="title_accept_order">Accept order</string>
    <string name="title_make_ready_order">Ready order</string>
    <string name="title_deliver_order">Deliver order</string>
    <string name="toast_getting_data_please_wait">Getting data please wait…</string>
    <string name="label_confirm_all">Confirm all</string>
    <string name="title_accept_all_orders">Accept all orders</string>
    <string name="label_booked_table">Table Number</string>
    <string name="label_order_type">Order Type</string>
    <string name="label_archived_orders">Archived Orders</string>
    <string name="label_delivery_time">Delivery time</string>
    <string name="label_go">GO</string>
    <string name="label_about">About</string>
    <string name="about_kitchen_app_and_version">Kitchen App Version 1.0.0</string>
    <string name="about_copyright_content">All content, pictures and texts of this app are protected by copyright.</string>
    <string name="about_copyright_company">© 2016 – 2017 Leeasy Solutions UG (limited liability)</string>
    <string name="label_imprint">IMPRINT</string>
    <string name="about_imprint_content">(ACCORDING TO § 5 TMG)</string>
    <string name="about_company">LeEasy Solutions UG (limited liability)</string>
    <string name="about_address">Date of entry 19 \n74076 Heilbronn, Germany \nManaging Director: Melanie Lee \nRegister details: AG Stuttgart / HRB 757846</string>
    <string name="about_contact">Contact</string>
    <string name="about_contact_details">Phone: 07131/40 55 675 \nE-mail: hello@leeasy-solutions.com</string>
    <string name="about_tax_number">Tax Number</string>
    <string name="about_tax_number_details">According to §27a of the German Turnover \nTax Act: 65204/02297 \nVAT ID: DE308120496</string>
    <string name="about_source">Source: www.e-right24.de</string>
    <string name="title_logout">Logout</string>
    <string name="msg_are_you_sure_want_to_logout">Are you sure want to logout ?</string>
    <string name="msg_logging_out">Logging out....</string>
    <string name="label_refresh_app_data">Update App Data</string>
    <string name="label_more">More</string>
    <string name="label_profile">Profile</string>
    <string name="label_delivery_method">Delivery Method:</string>
    <string name="label_note">Note</string>
    <string name="label_hello">Hello</string>
    <string name="title_new_order_notification">New order</string>

    <string-array name="nav_spinner_items_manager">
        <item>All Orders</item>
        <item>Owner Orders</item>
        <item>Kitchen Orders</item>
        <!--<item>Waiter Orders</item>-->
    </string-array>
    <string-array name="nav_spinner_items_user">
        <item>Kitchen Orders</item>
    </string-array>
    <string-array name="nav_spinner_items_waiter">
        <item>Waiter Orders</item>
    </string-array>


</resources>
