<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/title_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/title_logout"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_action_more_vert"
        android:title="@string/label_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_profile"
                android:title="@string/label_profile"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/menu_archived_orders"
                android:icon="@drawable/ic_action_archive"
                android:title="@string/label_archived_orders"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/menu_refresh_app_data"
                android:icon="@drawable/ic_refresh"
                android:title="@string/label_refresh_app_data"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_info_outline"
                android:title="@string/label_about"
                app:showAsAction="always|withText" />
        </menu>
    </item>
</menu>