<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dim_24">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_16"
                android:gravity="center"
                android:text="@string/about_kitchen_app_and_version"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/pure_white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_4"
                android:gravity="center"
                android:text="@string/about_copyright_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ccffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_copyright_company"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ccffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_24"
                android:gravity="center"
                android:text="@string/label_imprint"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/pure_white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_imprint_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ccffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:gravity="center"
                android:text="@string/about_company"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/pure_white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:gravity="center"
                android:text="@string/about_address"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ccffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:gravity="center"
                android:text="@string/about_contact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/pure_white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:gravity="center"
                android:text="@string/about_contact_details"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ccffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:gravity="center"
                android:text="@string/about_tax_number"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/pure_white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:gravity="center"
                android:text="@string/about_tax_number_details"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ccffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:gravity="center"
                android:text="@string/about_source"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ccffffff" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>