<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_dark_to_primary"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dim_48">
            <!-- Server URL Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_8"
                android:layout_marginTop="@dimen/dim_8"
                android:textColorHint="@color/textHintColorInverse">

                <EditText
                    android:id="@+id/input_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_host_url"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorTextIcon"
                    android:textColorHint="@color/textHintColorInverse" />
            </android.support.design.widget.TextInputLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_8"
                android:layout_marginTop="@dimen/dim_8"
                android:textColorHint="@color/textHintColorInverse">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_login_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorTextIcon"
                    android:textColorHint="@color/textHintColorInverse" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_8"
                android:layout_marginTop="@dimen/dim_8"
                android:textColorHint="@color/textHintColorInverse">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorTextIcon"
                    android:textColorHint="@color/textHintColorInverse" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_24"
                android:layout_marginTop="@dimen/dim_24"
                android:text="@string/label_login" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>